# Makefile.am - include
#
# This file is distributed under the terms of the MIT License.
# See the LICENSE file at the top of this tree, or if it is missing a copy can
# be found at http://opensource.org/licenses/MIT

include_HEADERS = config.h
nodist_include_HEADERS = ac_config.h cc_config.h

distclean-local:
	rm -f Makefile.in ac_config.h.in* cc_config.h.in~
